fix overflow take 3

--- a/src/global.css
+++ b/src/global.css
@@ -107,7 +107,6 @@ button {
   align-items: center;
   max-width: 100vw;
   overflow-x: hidden;
-  position: relative;
 }
 .section {
   position: relative;
